examples/test/testpolicy16728.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16728
  namespace: namespace234
spec:
  podSelector:
    matchLabels:
      key14: value19
      key26: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value27
          key1: value7
          key20: value36
      podSelector:
        matchLabels:
          key11: value15
          key17: value19
